Creasol DomBus plugin for Domoticz.
Author: Paolo Subiaco  tech@creasol.it
https://www.creasol.it/CreasolDomBus1

ChangeLog
0.0.4 2020-11-25
BugFix: dimmer status was not saved in Domoticz, so changing panel and
returning to the dimmer device get to a bad dimmer value. Thanks to Giorgio
for let me know this problem!

0.0.3 2020-08-17
New features:
* Temperature, Humidity and Temp+Hum sensors, implemented in Creasol DomBus2
device: ENV_TEMPERATURE, ENV_HUMIDITY, ENV_TEMP_HUM in device notes.
* Added OUT_LEDSTATUS to configure a led as RS485 TX status, instead of
OUT_DIGITAL 
* Added OUT_DIMMER, to generate a 500Hz output, 20 steps: 0, 5%, 10%, ...

0.0.2 2019-11-12
New feature: for every connected device, every 5 minutes (PERIODIC_STATUS_INTERVAL defined in
CreasolDomBusProtocol.py) Domoticz will transmit the status of those outputs.
This refresh is needed in case a DomBus device has been disconnected from
power supply, or in case of errors on the serial bus.

New feature: automatically remove from the list of known modules ones that do
not transmit since 15 minutes

0.0.1 First version
