@@ -5,8 +5,9 @@ https://www.creasol.it/CreasolDomBus1
 ChangeLog
 0.0.4 2020-11-25
 BugFix: dimmer status was not saved in Domoticz, so changing panel and
-returning to the dimmer device get to a bad dimmer value. Thanks to Giorgio
-for let me know this problem!
+returning to the dimmer device get to a bad dimmer value. 
+Also, now it's possible to turn off dimmer device by clicking on icon
+Thanks to Giorgio for let me know this problem!
 
 0.0.3 2020-08-17
 New features:
